--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <div class="table"><div class="2d"></div>
 
-    <p class="message"><font color=00ff00>Use keyboard arrows to control left player.</font></p>
+    <p class="message"><font color=6691ff>Use keyboard arrows to control left player.</font></p>
     <div class="table-inner">
         <span class="table__goal-crease circle"></span>
         <span class="table__faceoff table__faceoff--top-left circle"></span>
